tests/src/frontend/typechecking/invalid/overridable7.sk
base class B1 {
  fun m1(): void {
    void
  }
}

base class B2 {
  fun m1(): void {
    void
  }
}

class D1() extends B1, B2 {
  fun m1 from B1;
}
